# sw-battle-test

./: .clangd  .cursorrules  .gitattributes  .gitignore  CMakeLists.txt  KNOWN_ISSUES.md  README.md  build-clang.bat
.github/workflows/: ci-ubuntu.yml
src/: main.cpp
src/Core/: GameWorld.cpp  GameWorld.hpp  IBehavior.hpp  IComponent.hpp  IGameEvents.hpp  IGameWorld.hpp  Random.hpp  TypeRegistry.hpp  Types.hpp  Unit.hpp
src/Features/: Behaviors.hpp  Components.hpp  Hunter.hpp  Swordsman.hpp
src/Features/Behaviors/: MeleeAttackBehavior.hpp  MoveBehavior.hpp  RangeAttackBehavior.hpp  Utils.hpp
src/IO/System/: GameLogger.cpp  GameLogger.hpp
tests/: integration_scenario.txt  unit_tests.cpp
